# vascular-ai

./: .env  .gitignore  Dockerfile  README.md  app.py  config.yaml  pyproject.toml  questions.db  requirements.txt
Pubmed_Data/: 1984.txt  1985.txt  1986.txt  1987.txt  1988.txt  1989.txt  1990.txt  1991.txt  1992.txt  1993.txt  1994.txt  1995.txt  1996.txt  1997.txt  1998.txt  1999.txt  2000.txt  2001.txt  2002.txt  2003.txt  2004.txt  2005.txt  2006.txt  2007.txt  2008.txt  2009.txt  2010.txt  2012.txt  2015.txt
frontend/: package-lock.json  package.json
frontend/.next/: trace
frontend/src/app/api/chat/: route.ts
src/: dbsearch.py  env.py  pipelines.py  preprocess.py  rag.py
src/admin/: dashboard.py
src/api/: agent.py  dbsearch.py  logging.py  preprocess.py  rag.py  server.py  websearch.py
src/frontend/: package-lock.json  package.json
src/frontend/src/app/: layout.tsx  page.tsx
